--- a/OpenAlbum/res/layout/main.xml
+++ b/OpenAlbum/res/layout/main.xml
@@ -5,17 +5,22 @@
     android:layout_width="fill_parent"
     android:layout_height="wrap_content"
     android:scrollbars="vertical">
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-	android:id="@+id/row_layout" android:orientation="vertical"
-	android:layout_width="fill_parent" android:layout_height="fill_parent"
-	android:gravity="fill_vertical">
+
+<RelativeLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/row_layout"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:gravity="fill_vertical"
+    android:orientation="vertical" >
 
 	<ImageView android:id="@+id/datasource_icon"
+	    android:contentDescription="Data"
 		android:layout_height="wrap_content" android:layout_width="40dp"
 		android:layout_marginLeft="5dp" android:layout_alignParentLeft="true"
 		android:layout_centerVertical="true">
 	</ImageView>
-
+	
 	<TextView android:id="@+id/list_text" android:layout_height="wrap_content"
 		android:text="textview" android:textColor="#ffffff"
 		android:layout_gravity="top" android:textSize="22sp"
